# MAVSDK-Rust

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
examples/: info.rs  mocap.rs  telemetry.rs
mavsdk-bindings/: Cargo.toml  build.rs
mavsdk-bindings/src/: lib.rs
src/: info.rs  lib.rs  mocap.rs  telemetry.rs
templates/: enum.j2  file.j2  struct.j2  type_conversions
tools/: generate_from_protos.sh
