[package]
name = "libmavsdk"
version = "0.1.0"
authors = ["Ildar Sadykov <irsdkv@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.5.2"
bytes = "1.1.0"
prost = "0.8.0"

futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
tonic-build = "0.5.2"
